[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z3t-ai-agent-sdk"
version = "0.1.1b0"
description = "z3t.ai Agent SDK — connect your agent to the z3t relay"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "z3t.ai" }]
keywords = ["z3t", "agent", "sdk", "ai-agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://z3t.ai"
Repository = "https://github.com/z3t-ai/sdks"
Issues = "https://github.com/z3t-ai/sdks/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
llm = ["openai>=1.0", "anthropic>=0.40", "google-genai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["z3t_ai_agent"]
